src/objects/Amendment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Financing_Statement_Done__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Financing_Statement_Expires__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Amendments</relationshipLabel>
        <relationshipName>Amendments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Renewal_Date_New__c</fullName>
        <description>This field was created to store the new renewal date from the opportunity. Old version of renewal date is calculated, Dom requested to have it as an open field.</description>
        <label>Renewal Date - New</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_date__c</fullName>
        <formula>Date(YEAR(Date_Financing_Statement_Expires__c), (MONTH(Date_Financing_Statement_Expires__c) - 1), DAY(Date_Financing_Statement_Expires__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal date</label>
        <type>Date</type>
    </fields>
    <label>Amendment</label>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>Amendment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>